# gamepower-network

./: .gitignore  Cargo.toml  Dockerfile  README.md  customSpecRaw.json  docker-compose.yml
.devcontainer/: .devcontainer.json.icloud  devcontainer.json
.github/workflows/: .build-push-template.yml.icloud  build-push-template.yml  check.yml  print-version.yml  publish.yml  tag-commit.yml
docs/: .testing-guide.md.icloud  testing-guide.md
images/: .cover.png.icloud  .step1.png.icloud  .step2.png.icloud  .step4b.png.icloud
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/lootbox/: Cargo.toml
pallets/lootbox/src/: default_weight.rs  lib.rs
pallets/powertag-manager/: Cargo.toml
pallets/primitives/: Cargo.toml
pallets/primitives/src/: lib.rs
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: constants.rs  lib.rs
runtime/src/weights/: mod.rs  module_lootbox.rs
scripts/: docker_run.sh
