[package]
authors = ['GamePower Devs <https://github.com/GamePowerNetwork>']
build = 'build.rs'
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
edition = '2018'
homepage = 'https://gamepower.network'
license = 'Unlicense'
name = 'gamepower'
repository = 'https://github.com/GamePowerNetwork/gamepower-node/'
version = '0.0.1'

[[bin]]
name = 'gamepower'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = '3.0.0'

[dependencies]
jsonrpc-core = '15.1.0'
structopt = '0.3.8'
serde_json = "1.0.41"

# Substrate dependencies
frame-benchmarking = {version = '3.1.0', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
frame-benchmarking-cli = {version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
pallet-transaction-payment-rpc = {version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sc-basic-authorship = {version = '0.9.0', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sc-cli = {features = ['wasmtime'], version = '0.9.0', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sc-client-api = {version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sc-consensus = {version = '0.9.0', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sc-consensus-aura = {version = '0.9.0', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sc-executor = {features = ['wasmtime'], version = '0.9.0', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sc-finality-grandpa = {version = '0.9.0', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sc-keystore = {version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sc-rpc = {version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sc-rpc-api = {version = '0.9.0', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sc-service = {features = ['wasmtime'], version = '0.9.0', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sc-telemetry = {version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sc-transaction-pool = {version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sp-api = {version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sp-block-builder = {version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sp-blockchain = {version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sp-consensus = {version = '0.9.0', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sp-consensus-aura = {version = '0.9.0', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sp-core = {version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sp-finality-grandpa = {version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sp-inherents = {version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sp-runtime = {version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sp-transaction-pool = {version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sp-timestamp = {version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
substrate-frame-rpc-system = {version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sc-finality-grandpa-warp-sync = {version = '0.9.0', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}

# local dependencies
gamepower-runtime = { path = '../runtime', version = '0.0.1' }

[features]
default = []
runtime-benchmarks = ['gamepower-runtime/runtime-benchmarks']
