[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'gamepower-lootbox'
readme = 'README.md'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { default-features = false, version = "1.0.124", optional = true }
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
frame-benchmarking = { default-features = false, optional = true, version = '3.1.0' }
sp-std = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
primitives = { package = "gamepower-primitives", path = "../primitives", default-features = false }
orml-traits = { default-features = false, version = '0.4.0' }
orml-nft = { default-features = false, version = '0.4.0' }
orml-currencies = { default-features = false, version = '0.4.0' }
orml-tokens = { default-features = false, version = '0.4.0' }

[dev-dependencies]
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
  'serde',
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'sp-std/std',
  'sp-runtime/std',
  'primitives/std',
  'orml-traits/std',
  'orml-nft/std',
  'orml-currencies/std',
]