[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-template'
readme = 'README.md'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
[dev-dependencies.serde]
version = '1.0.119'

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dev-dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'orml-traits/std',
    'orml-nft/std',
    'gamepower-traits/std',
    'gamepower-primitives/std',
    'gamepower-wallet/std',
	'gamepower-wallet-integration/std',
]
try-runtime = ['frame-support/try-runtime']
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
optional = true
tag = 'monthly-2021-07'
version = '3.1.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies]
# Orml packages
orml-traits = { default-features = false, version = '0.4.0' }
orml-nft = { default-features = false, version = '0.4.0' }

# GamePower packages
gamepower-traits = { package = "gamepower-traits", git = "https://github.com/GamePowerNetwork/gamepower-module-library", branch = "main", default-features = false }
gamepower-primitives = { package = "gamepower-primitives", git = "https://github.com/GamePowerNetwork/gamepower-module-library", branch = "main", default-features = false }
gamepower-wallet = { package = "gamepower-wallet", git = "https://github.com/GamePowerNetwork/gamepower-module-library", branch = "main", default-features = false }
gamepower-wallet-integration = { package = "gamepower-wallet-integration", git = "https://github.com/GamePowerNetwork/gamepower-module-library", branch = "main", default-features = false }